[package]
name = "xrk-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdrk = "1.0"
clap = { version = "4.1", features = ["derive", "cargo"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.1"
